@@ -398,8 +398,11 @@ class MainWindow(gtk.Window):
                 rotation = rotation % 360
 
             if prefs['zoom mode'] == constants.ZOOM_MODE_MANUAL:
-                scaled_width = int(self._manual_zoom * unscaled_x / 100)
-                scaled_height = int(self._manual_zoom * unscaled_y / 100)
+                # If 'Scale small images' is true, scale up the image's base size
+                scale_x = scale_up and scaled_width or unscaled_x
+                scale_y = scale_up and scaled_height or unscaled_y
+                scaled_width = int(self._manual_zoom * scale_x / 100)
+                scaled_height = int(self._manual_zoom * scale_y / 100)
 
                 if rotation in (90, 270):
                     scaled_width, scaled_height = scaled_height, scaled_width
